<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.crispminds.viewmodels.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_mobile_security"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="4"
            android:text="@={viewModel.userOtp}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.otpErrorMsg}"
            android:visibility="@{viewModel.otpErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tools:text="Error" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/space_20"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/resend_otp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_20"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/otp_sent_message"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_30"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/proxima_nova_bold"
            android:onClick="@{()->viewModel.onVerifyOtpClick()}"
            android:text="@string/verify_otp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/already_have_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{()->viewModel.backToLogin()}"
            android:text="@string/already_a_member" />

        <TextView
            android:id="@+id/terms_and_privacy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_20"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{()->viewModel.gotoTC()}"
            android:text="@string/terms_and_privacy_text" />


    </LinearLayout>

</layout>