<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.crispminds.viewmodels.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/fName"
            android:text="@={viewModel.firstName}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.firstNameErrorMsg}"
            android:visibility="@{viewModel.firstNameErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tools:text="Error" />


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/lName"
            android:text="@={viewModel.lastName}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.lastNameErrorMsg}"
            android:visibility="@{viewModel.lastNameErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tools:text="Error" />


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.emailId}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.emailErrorMsg}"
            android:visibility="@{viewModel.emailErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tools:text="Error" />


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:text="@={viewModel.mobileNumber}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.mobileNoErrorMsg}"
            android:visibility="@{viewModel.mobileNoErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tools:text="Error" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/proxima_nova_bold"
            android:onClick="@{()-> viewModel.onRegisterClick()}"
            android:text="@string/register"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/already_have_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{()-> viewModel.onLoginClick()}"
            android:text="@string/already_a_member" />

        <TextView
            android:id="@+id/terms_and_privacy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_20"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/terms_and_privacy_text" />


    </LinearLayout>

</layout>