<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.crispminds.viewmodels.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">


        <EditText
            style="@style/cardEditTextStyle"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/email"
            android:text="@={viewModel.emailId}" />

        <TextView
            style="@style/errorTextStyle"
            context="@{viewModel.context}"
            errorText="@{viewModel.emailErrorMsg}"
            android:visibility="@{viewModel.emailErrorMsg.empty? View.INVISIBLE : View.VISIBLE}"
            tool:text="Error" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_20"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/proxima_nova_bold"
            android:onClick="@{()->viewModel.onSendOtpClick()}"
            android:text="@string/send_otp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/dont_have_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_10"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{() -> viewModel.onRegisterClick()}"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/terms_and_privacy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_20"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/terms_and_privacy_text" />


    </LinearLayout>

</layout>