<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayLight"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/my_session_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_user" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/my_session"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_start" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/answer_earn"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_calender" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/events_workshop"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_payment" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/payment"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_invite" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/invite_friends_family"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_store" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/crisp_store"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_setting" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/crisp_corner"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/space_30"
                android:layout_height="@dimen/space_30"
                android:layout_margin="@dimen/space_10"
                android:padding="@dimen/space_5"
                android:src="@drawable/ic_setting" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/space_60"
                android:text="@string/setting"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginStart="45dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/space_30"
            android:layout_height="@dimen/space_30"
            android:layout_margin="@dimen/space_10"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/logout"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>