<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fitsSystemWindows="true"
            android:background="@drawable/walk_through_img_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/skip_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:textColor="@color/colorBlack"
                    android:paddingEnd="@dimen/space_20"
                    android:layout_marginTop="@dimen/space_50"
                    android:layout_gravity="end"
                    android:textSize="13dp"
                    android:visibility="invisible"/>


                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/space_50"
                    android:src="@drawable/ic_splash_01"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_with_experts"
                    android:layout_marginTop="@dimen/space_20"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum"
                    android:paddingStart="@dimen/space_20"
                    android:paddingEnd="@dimen/space_20"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/space_20"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12dp"/>



            </LinearLayout>


        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
